src/objects/CustomObject13__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>采购工具名称</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>采购工具编号</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>品牌</label>
        <type>TextArea</type>
    </fields>
    <label>工具采购</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>GC-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>工具采购编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>工具采购</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>